--- a/index.html
+++ b/index.html
@@ -23,71 +23,34 @@
 
     <h1 id="projects" class="important-lines">Projects</h1>
     <div class="projects-container">
-        <div class="card">
-            <img src="images/android.jpg">
-            <h3>Rona-Radar</h2>
-            <p>An app to see COVID news and locate hospitals in your area. Won third at HACKKU 21</p>
-        </div>
-        <div class="card">
-            <img src="images/notes.jpg">
-            <h3>G.O.A.T NOTES</h2>
-            <p>A chrome extension to take notes on different websites</p>
-        </div>
+        <a href="https://github.com/Rona-Radar/app" target="_blank">
+            <div class="card">
+                <img src="images/android.jpg">
+                <h3>Rona-Radar</h2>
+                    <p>An app to see COVID news and locate hospitals in your area. Won third at HACKKU 21</p>
+            </div>
+        </a>
+        <a href="https://github.com/NebuDev14/G.O.A.T-Notes" target="_blank">
+            <div class="card">
+                <img src="images/notes.jpg">
+                <h3>G.O.A.T NOTES</h2>
+                <p>A chrome extension to take notes on different websites.</p>
+            </div>
+        </a>
+        <a href="https://atomhacks.org" target="_blank">
+            <div class="card">
+                <img src="images/atomhacks.JPG">
+                <h3>Atomhacks Commitee</h3>
+                <p>Worked on the website and helped out with workshops for teaching participants</p>
+            </div>
+        </a>
+        <a href="https://github.com/fahimh21y/yuhutils" target="_blank">
+            <div class="card">
+                <img src="images/minecraft.jpg">
+                <h3>yuhutils Plugin</h3>
+                <p>Minecraft and discord bidirectional communication plugin</p>
+            </div>
+        </a>
     </div>
-    <div class="list-container">
-        <ul class="less-important-lines hackathon-list">
-            <li>
-                <a href="/projects/hackku.html">
-                    <h3>HACKKU 2021 (I won 3rd 💯)</h3>
-                </a>
-            </li>
-            <li>
-                <a href="/projects/coincoin.html">
-                    <h3>CoinCoin 💰</h3>
-                </a>
-            </li>
-            <li>
-                <a href="/projects/waste-watcher.html">
-                    <h3>Waste Watcher 🥫</h3>
-                </a>
-            </li>
-            <li>
-                <a href="/projects/goat-notes.html">
-                    <h3>G.O.A.T Notes 🐐</h3>
-                </a>
-            </li>
-        </ul>
-    </div>
-    <h2>Ongoing projects</h2>
-    <ul class="less-important-lines">
-        <li>
-            <a target="_blank" href="https://github.com/frykher/krykher">
-                <h3>This website</h3>
-            </a>
-        </li>
-        <li>
-            <a target="_blank" href="https://github.com/frykher/image-utils">
-                <h3>Image effects using C++</h3>
-            </a>
-        </li>
-        <li>
-            <a target="_blank" href="https://github.com/frykher/yuhutils">
-                <h3>Minecraft and Discord duplex communication plugin</h3>
-            </a>
-        </li>
-    </ul>
-    <h2>Past work and experiences</h2>
-    <ul class="less-important-lines">
-        <li>
-            <a href="/projects/atomhacks.html">
-                <h3>Atomhacks Committee</h3>
-            </a>
-        </li>
-        <li>
-            <a href="/projects/codering.html">
-                <h3>Codering Events Management</h3>
-            </a>
-        </li>
-    </ul>
 </body>
 </html>
