--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1 id="about" class="important-lines">o/</h1>
     <p>Hey, I'm <b>Fahim!</b> I like to mess around with technology and work on CS-related projects.</p>
     <p>I'm currently a junior in high school and participating in a ton of hackathons to grow my skills. I'm also participating in All Star Code's 2022 Summer Intensive to expand my knowledge of web development.</p>
-    <p>If you'd like to get in touch or have any inquires you can reach out to me at <b>fahimhussain21@gmail.com</b></p>
+    <p>If you'd like to get in touch or have any inquires you can reach out to me at <a href="mailto: fahimhussain21@gmail.com"><b>fahimhussain21@gmail.com</b></a></p>
 
     <h1 id="projects" class="important-lines">Projects</h1>
     <div class="projects-container">
