--- a/index.html
+++ b/index.html
@@ -1,56 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/global.css">
-    <title>Fahim</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/448322c026.js" crossorigin="anonymous"></script>
+    <title>Fahim H</title>
 </head>
+
 <body>
-    <div class="navbar less-important-lines">
-        <a href="#about"><h2>about</h2></a>
-        <a href="#projects"><h2>projects</h2></a>
-        <a href="/skills"><h2>skills</h2></a>
+    <div class="navbar">
+        <a href="#about">
+            <h2>about</h2>
+        </a>
+        <a href="#projects">
+            <h2>projects</h2>
+        </a>
+        <a href="https://github.com/frykher" target="_blank">
+            <h2><i class="fa-brands fa-github"></i></h2>
+        </a>
+        <a href="https://www.linkedin.com/in/fahim-hussain-1723431b2/" target="_blank">
+            <h2><i class="fa-brands fa-linkedin-in"></i></h2>
+        </a>
     </div>
 
-    <h1 id="about" class="important-lines">o/</h1>
-    <p>Hey, I'm <b>Fahim!</b> I like to mess around with technology and work on CS-related projects.</p>
-    <p>I'm currently a junior in high school and participating in a ton of hackathons to grow my skills. I'm also participating in All Star Code's 2022 Summer Intensive to expand my knowledge of web development.</p>
-    <p>If you'd like to get in touch or have any inquires you can reach out to me at <a href="mailto: fahimhussain21@gmail.com"><b>fahimhussain21@gmail.com</b></a></p>
+    <h1 id="about">o/</h1>
+    <p>Hey, I'm <a href="https://github.com/frykher" target="_blank"><b>Fahim!</b></a> I like to mess around with
+        technology and work on CS-related projects.</p>
+    <p>I'm currently a junior at <a href="bxscience.edu" target="_blank"><b>The Bronx High School of Science</b></a> and
+        participating in a ton of hackathons to grow my skills. I'm also participating in All Star Code's 2022 Summer
+        Intensive to expand my knowledge of web development.</p>
+    <p>If you'd like to get in touch or have any inquires you can reach out to me at <a
+            href="mailto:fahimhussain21@gmail.com"><b>fahimhussain21@gmail.com</b></a></p>
 
-    <h1 id="projects" class="important-lines">Projects</h1>
+    <h1 id="projects">Projects</h1>
     <div class="projects-container">
-        <a href="https://github.com/Rona-Radar/app" target="_blank">
+        <a class="project-wrapper" href="https://github.com/Rona-Radar/app" target="_blank">
             <div class="card">
                 <img src="images/android.jpg">
-                <h3>Rona-Radar</h2>
-                    <p>An app to see COVID news and locate hospitals in your area. Won third at HACKKU 21</p>
+                <h2>Rona-Radar</h2>
+                <p>An app to see COVID news and locate hospitals in your area. Won third at HACKKU 21</p>
             </div>
         </a>
-        <a href="https://github.com/NebuDev14/G.O.A.T-Notes" target="_blank">
+        <a class="project-wrapper" href="https://github.com/NebuDev14/G.O.A.T-Notes" target="_blank">
             <div class="card">
                 <img src="images/notes.jpg">
-                <h3>G.O.A.T NOTES</h2>
+                <h2>G.O.A.T NOTES</h2>
                 <p>A chrome extension to take notes on different websites.</p>
             </div>
         </a>
-        <a href="https://atomhacks.org" target="_blank">
+        <a class="project-wrapper" href="https://atomhacks.org" target="_blank">
             <div class="card">
                 <img src="images/atomhacks.JPG">
-                <h3>Atomhacks Commitee</h3>
+                <h2>Atomhacks Commitee</h2>
                 <p>Worked on the website and helped out with workshops for teaching participants</p>
             </div>
         </a>
-        <a href="https://github.com/fahimh21y/yuhutils" target="_blank">
+        <a class="project-wrapper" href="https://github.com/frykher/yuhutils" target="_blank">
             <div class="card">
                 <img src="images/minecraft.jpg">
-                <h3>yuhutils Plugin</h3>
-                <p>Minecraft and discord bidirectional communication plugin</p>
+                <h2>yuhutils</h2>
+                <p>Minecraft-discord bidirectional communication plugin</p>
             </div>
         </a>
     </div>
 </body>
+
 </html>
