fixed link andcard responsiveness

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <h1 id="about">o/</h1>
     <p>Hey, I'm <a href="https://github.com/frykher" target="_blank"><b>Fahim!</b></a> I like to mess around with
         technology and work on CS-related projects.</p>
-    <p>I'm currently a junior at <a href="bxscience.edu" target="_blank"><b>The Bronx High School of Science</b></a> and
+    <p>I'm currently a junior at <a href="https://bxscience.edu" target="_blank"><b>The Bronx High School of Science</b></a> and
         participating in a ton of hackathons to grow my skills. I'm also participating in All Star Code's 2022 Summer
         Intensive to expand my knowledge of web development.</p>
     <p>If you'd like to get in touch or have any inquires you can reach out to me at <a
